grace.interpreter/src/test/resources/shouldfail/t010_classParamDefClash_fail_test.grace
class test(x) {
      def x = 2;
      print(x);
};
